p3/argocd-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-service
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
  type: LoadBalancer
