p3/argocd-np.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-nodeport-service
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
