p3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: argocd
spec:
  rules:
    - http:
        paths:
        - path: /argo
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 80
