p3/service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
spec:
  rules:
    - http:
        paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8888
